[chromium] TiledLayerChromium drops invalidates that occur during LayerTextureUpdater::prepareToUpdate https://bugs.webkit.org/show_bug.cgi?id=76067

Patch by Scott Violet <sky@google.com> on 2012-01-11
Reviewed by James Robinson.

Source/WebCore:

Test coverage in TiledLayerChromiumTest.

* platform/graphics/chromium/TiledLayerChromium.cpp:
(WebCore::TiledLayerChromium::prepareToUpdateTiles):

Source/WebKit/chromium:

* tests/TiledLayerChromiumTest.cpp:
(WTF::FakeLayerTextureUpdater::FakeLayerTextureUpdater):
(WTF::FakeLayerTextureUpdater::prepareCount):
(WTF::FakeLayerTextureUpdater::clearPrepareCount):
(WTF::FakeLayerTextureUpdater::lastUpdateRect):
(WTF::FakeTiledLayerChromium::fakeLayerTextureUpdater):
(WTF::FakeLayerTextureUpdater::setRectToInvalidate):
(WTF::FakeLayerTextureUpdater::prepareToUpdate):
(WTF::TEST):

Canonical link: https://commits.webkit.org/92944@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104780 268f45cc-cd09-0410-ab3c-d52691b4dbfc